--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 # Elite Enterprise Compliance Dashboard Requirements
+# Optimized for Python 3.13 and Streamlit Cloud
 
 # Core Streamlit Framework
 streamlit==1.28.1
 streamlit-option-menu==0.3.6
 
 # Data Processing & Analysis
-pandas==2.0.3
-numpy==1.24.3
+pandas>=2.1.0
+numpy>=1.27.0
 
 # Premium Visualization Libraries
 plotly==5.17.0
+plotly-express==0.4.1
 
 # Google Sheets Integration
 gspread==5.12.0
@@ -17,6 +19,9 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
+
+# Authentication & Security
+google-oauth2-lib==0.0.1
 oauth2client==4.1.3
 
 # Enhanced Data Export Capabilities
@@ -42,3 +47,12 @@ typing-extensions==4.8.0
 
 # Enhanced JSON Processing
 ujson==5.8.0
+
+# Optional: Advanced Analytics (uncomment if needed)
+# scipy==1.11.4
+# scikit-learn==1.3.2
+# statsmodels==0.14.0
+
+# Optional: Enhanced Styling (uncomment if needed)  
+# streamlit-aggrid==0.3.4
+# streamlit-card==0.0.5
