--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,52 @@
-# LexCura Elite Compliance Dashboard - Required Dependencies
-# Compatible with Python 3.8+ and Streamlit Cloud deployment
+# LexCura Elite Executive Dashboard - Fortune 500 Requirements
+# Production-ready dependencies for enterprise deployment
 
-# Core Streamlit and Data Processing
-streamlit>=1.28.0,<2.0.0
-pandas>=2.0.0,<3.0.0
-numpy>=1.24.0,<2.0.0
+# Core Framework
+streamlit==1.28.1
+plotly==5.17.0
 
-# Plotting and Visualization
-plotly>=5.15.0,<6.0.0
+# Data Processing & Analytics
+pandas==2.1.3
+numpy==1.24.3
 
-# Google Sheets Integration (REQUIRED for client data)
-gspread>=5.12.4,<6.0.0
-google-auth>=2.23.0,<3.0.0
-google-auth-oauthlib>=1.1.0,<2.0.0
-google-auth-httplib2>=0.1.1,<1.0.0
+# Authentication & Security
+hashlib2==1.0.1
+cryptography==41.0.7
 
-# Optional Interactive Features (with graceful fallbacks in code)
-streamlit-plotly-events>=0.0.6
-kaleido>=0.2.1
+# Utilities & Performance
+python-dateutil==2.8.2
+pytz==2023.3
+pillow==10.1.0
 
-# File Processing and Export Capabilities
-Pillow>=10.0.0,<11.0.0
+# Optional: Enhanced Features (uncomment if needed)
+# streamlit-authenticator==0.2.3
+# streamlit-option-menu==0.3.6
+# streamlit-plotly-events==0.0.6
+# streamlit-aggrid==0.3.4
+# streamlit-extras==0.3.5
 
-# Utility Libraries
-requests>=2.31.0,<3.0.0
+# Development & Testing (remove in production)
+# pytest==7.4.3
+# pytest-streamlit==1.0.0
+
+# Production Server (for deployment)
+# gunicorn==21.2.0
+# uvicorn==0.24.0
+
+# Database Connectors (uncomment as needed)
+# sqlalchemy==2.0.23
+# psycopg2-binary==2.9.9
+# pymongo==4.6.0
+
+# Cloud Storage (uncomment as needed)
+# boto3==1.34.0
+# google-cloud-storage==2.10.0
+# azure-storage-blob==12.19.0
+
+# Monitoring & Logging (production)
+# sentry-sdk==1.38.0
+# structlog==23.2.0
+
+# Performance Optimization
+# streamlit-cache==0.1.0
+# memory-profiler==0.61.0
